Refactoring: SCCConfig is a simple bean, does not need to wrap Properties